# score-manager-backend

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.deta/: prog_info  state
